<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_for_snackbar"
    android:background="@color/background_color"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.hackerkernel.humhai.activity.LoginActivity">

        <include layout="@layout/include_toolbar" />

        <EditText
            android:id="@+id/login_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            android:background="@drawable/custom_edittext"/>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/accent_button_round"
            android:text="@string/login"
            android:textColor="@color/icons" />
    </LinearLayout>

</ScrollView>
